--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -94,76 +94,76 @@ UKR_COMMIE_arr_khrushchev:0 "우크라이나가 흐루시초프를 체포하다"
 UKR_GER_WHR_LIT_gov_khrushchev:0 "흐루시초프가 권력을 잡다"
 UKR_AUS_HUN_gov_khrushchev:0 "흐루시초프가 권력을 잡다"
 UKR_COMMIE_gov_khrushchev:0 "흐루시초프가 권력을 잡다"
-UKR_GER_royal_will:0 "Monarchist Restoration in Ukraine"
-UKR_AUS_HUN_royal_will:0 "Monarchist Restoration in Ukraine"
-UKR_WHR_LIT_royal_will:0 "Monarchist Restoration in Ukraine"
-UKR_COMMIE_royal_will:0 "Monarchist Restoration in Ukraine"
-UKR_GER_gov_colapse:0 "Ukrainian Government Collapses"
-UKR_NO_COMMIE_gov_colapse:0 "Ukrainian Government Collapses"
-UKR_GEO_gov_colapse:0 "Ukrainian Government Collapses"
-UKR_COMMIE_gov_colapse:0 "Ukrainian Government Collapses"
-UKR_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_RUS_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_GEO_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_FRA_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_ENG_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_SRI_orientate_to_internationale:0 "Ukraine orientates towards the International"
-UKR_stay_mitt:0 "Ukraine stays in the Reichspakt"
-UKR_GEO_stay_mitt:0 "Ukraine stays in the Reichspakt"
-UKR_INTERNIATONALE_stay_mitt:0 "Ukraine stays in the Reichspakt"
-UKR_islationism:0 "Ukraine moves towards Isolationism"
-UKR_RUS_islationism:0 "Ukraine moves towards Isolationism"
-UKR_GEO_islationism:0 "Ukraine moves towards Isolationism"
-UKR_FRA_islationism:0 "Ukraine moves towards Isolationism"
-UKR_ENG_islationism:0 "Ukraine moves towards Isolationism"
-UKR_SRI_islationism:0 "Ukraine moves towards Isolationism"
-UKR_FRA_accepted_us:0 "France accepted us"
-UKR_FRA_refused_us:0 "France rejected us"
-UKR_GER_CAN_joined_inter:0 "Ukraine joined the Internationale"
-UKR_GER_coup_succeds:0 "German Coup succeeds in Ukraine"
-UKR_OTHER_coup_succeds:0 "German Coup succeeds in Ukraine"
-UKR_GER_puppet:0 "Germany is our master now"
-UKR_GER_coup_failed:0 "German Coup in Ukraine fails"
-UKR_neutrality:0 "Ukraine Neutral foreign Policy"
-UKR_RUS_neutrality:0 "Ukraine Neutral foreign Policy"
-UKR_INTERNATIONALE_neutrality:0 "Ukraine Neutral foreign Policy"
-UKR_GER_orientate_to_mitte:0 "Ukraine orientates towards the Reichspakt"
-UKR_orientate_to_mitte:0 "Ukraine orientates towards the Reichspakt"
-UKR_GEO_orientate_to_mitte:0 "Ukraine orientates towards the Reichspakt"
-UKR_INTERNATIONALE_orientate_to_mitte:0 "Ukraine orients towards the Reichspakt"
-UKR_GER_accepted_us:0 "Germany accepted us"
-UKR_GER_refused_us:0 "Germany rejected us"
-UKR_GER_stefan_hab:0 "Ukraine Chose Stefan von Habsburg as heir"
-UKR_AUS_stefan_hab:0 "Ukraine Chose Stefan von Habsburg as heir"
-UKR_GER_daniil_sko:0 "Ukraine Chose Daniil Skoropadsky as heir"
-UKR_AUS_daniil_sko:0 "Ukraine Chose Daniil Skoropadsky as heir"
-UKR_recognize_russian:0 "Ukraine recognises Russian as an official language"
-UKR_no_recognize_russian:0 "Ukraine does not recognise Russian as an official language"
-UKR_free_trade_RUS:0 "Free Trade Agreement with Ukraine"
-UKR_no_free_trade_RUS:0 "Ukraine refuses Free Trade Agreement with us"
-UKR_GER_no_free_trade_RUS:0 "Ukraine refuses Free Trade Agreement with the Russians"
-UKR_RUS_free_trade_UKR:0 "Russia accepts the Ukrainian Free Trade Agreement"
-UKR_RUS_treaty_of_pereyaslav:0 "Treaty of Pereyaslav"
-UKR_GER_treaty_of_pereyaslav:0 "Treaty of Pereyaslav"
-UKR_RUS_say_no_treaty_of_pereyaslav:0 "Ukraine refuses the Treaty of Pereyaslav"
-UKR_GER_say_no_treaty_of_pereyaslav:0 "Ukraine refuses the Treaty of Pereyaslav"
-UKR_GER_embargo:0 "Ukrainian Embargo of Germany"
-UKR_GER_care_embargo:0 "We embargoed Germany"
-UKR_GER_do_not_care_embargo:0 "Germany doesn't care!"
-UKR_refused_end_embargo_GER:0 "Ukraine refused to end their embargo"
+UKR_GER_royal_will:0 "우크라이나의 군주제가 복원되다"
+UKR_AUS_HUN_royal_will:0 "우크라이나의 군주제가 복원되다"
+UKR_WHR_LIT_royal_will:0 "우크라이나의 군주제가 복원되다"
+UKR_COMMIE_royal_will:0 "우크라이나의 군주제가 복원되다"
+UKR_GER_gov_colapse:0 "우크라이나 정부가 붕괴되다"
+UKR_NO_COMMIE_gov_colapse:0 "우크라이나 정부가 붕괴되다"
+UKR_GEO_gov_colapse:0 "우크라이나 정부가 붕괴되다"
+UKR_COMMIE_gov_colapse:0 "우크라이나 정부가 붕괴되다"
+UKR_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_RUS_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_GEO_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_FRA_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_ENG_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_SRI_orientate_to_internationale:0 "우크라이나가 국제를 향하여 방향을 정하다"
+UKR_stay_mitt:0 "우크라이나가 제국 조약에 머무르다"
+UKR_GEO_stay_mitt:0 "우크라이나가 제국 조약에 머무르다"
+UKR_INTERNIATONALE_stay_mitt:0 "우크라이나가 제국 조약에 머무르다"
+UKR_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_RUS_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_GEO_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_FRA_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_ENG_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_SRI_islationism:0 "우크라이나가 고립주의를 향하여 움직이다"
+UKR_FRA_accepted_us:0 "프랑스가 우리를 승낙하다"
+UKR_FRA_refused_us:0 "프랑스가 우리를 거절하다"
+UKR_GER_CAN_joined_inter:0 "우크라이나가 인터네셔널에 가입하다"
+UKR_GER_coup_succeds:0 "우크라이나에서 독일의 쿠데타가 성공하다"
+UKR_OTHER_coup_succeds:0 "우크라이나에서 독일의 쿠데타가 성공하다"
+UKR_GER_puppet:0 "독일은 이제 우리의 주인이다"
+UKR_GER_coup_failed:0 "우크라이나에서 독일의 쿠데타가 실패하다"
+UKR_neutrality:0 "우크라이나의 중립적 대외 정책"
+UKR_RUS_neutrality:0 "우크라이나의 중립적 대외 정책"
+UKR_INTERNATIONALE_neutrality:0 "우크라이나의 중립적 대외 정책"
+UKR_GER_orientate_to_mitte:0 "우크라이나가 제국 조약을 향하여 방향을 정하다"
+UKR_orientate_to_mitte:0 "우크라이나가 제국 조약을 향하여 방향을 정하다"
+UKR_GEO_orientate_to_mitte:0 "우크라이나가 제국 조약을 향하여 방향을 정하다"
+UKR_INTERNATIONALE_orientate_to_mitte:0 "우크라이나가 제국 조약을 향하여 방향을 정하다"
+UKR_GER_accepted_us:0 "독일이 우리를 승낙하다"
+UKR_GER_refused_us:0 "독일이 우리를 거절하다"
+UKR_GER_stefan_hab:0 "우크라이나가 후계자로 스테판 폰 합스부르크를 선택하다"
+UKR_AUS_stefan_hab:0 "우크라이나가 후계자로 스테판 폰 합스부르크를 선택하다"
+UKR_GER_daniil_sko:0 "우크라이나가 후계자로 다닐로 스코로파즈키를 선택하다"
+UKR_AUS_daniil_sko:0 "우크라이나가 후계자로 다닐로 스코로파즈키를 선택하다"
+UKR_recognize_russian:0 "우크라이나가 러시아어를 공식 언어로 인정하다"
+UKR_no_recognize_russian:0 "우크라이나는 러시아어를 공식 언어로 인정하지 않았다"
+UKR_free_trade_RUS:0 "우크라이나와의 자유 무역 협정"
+UKR_no_free_trade_RUS:0 "우크라이나가 우리와의 자유 무역 협정을 거절하다"
+UKR_GER_no_free_trade_RUS:0 "우크라이나가 러시아와의 자유 무역 협정을 거절하다"
+UKR_RUS_free_trade_UKR:0 "러시아가 우크라이나와의 자유 무역 협정을 승낙하다"
+UKR_RUS_treaty_of_pereyaslav:0 "페레야슬라프 조약"
+UKR_GER_treaty_of_pereyaslav:0 "페레야슬라프 조약"
+UKR_RUS_say_no_treaty_of_pereyaslav:0 "우크라이나가 페레야슬라프 조약을 거절하다"
+UKR_GER_say_no_treaty_of_pereyaslav:0 "우크라이나가 페레야슬라프 조약을 거절하다"
+UKR_GER_embargo:0 "우크라이나의 독일 금수 조치"
+UKR_GER_care_embargo:0 "우리가 독일에게 금수 조치하다"
+UKR_GER_do_not_care_embargo:0 "독일은 신경 쓰지 않아!"
+UKR_refused_end_embargo_GER:0 "우크라이나가 그들의 금수 조치를 끝내기를 거절하다"
 
 ### Flag descriptions ###
-UKR_Taxation_fail:0 "Taxation of Kulaks failed"
-UKR_Vynnych_won:0 "Ukrainian bourgeoisie dismissed Khrushchev"
-UKR_Kruschev_won:0 "Khrushchev proclaimed the Republic"
-UKR_VIN_POWER:0 "Russophiles controls the government"
-UKR_OUN_POWER:0 "Ukrainian nationalists control the government"
-UKR_HETMAN_POWER:0 "Hetman Skoropadsky controls the government"
-UKR_RECOV:0 "First stage of the industrialisation is complete"
+UKR_Taxation_fail:0 "쿨라크 세금의 실패"
+UKR_Vynnych_won:0 "우크라이나 부르주아가 흐루시초프를 해고하다"
+UKR_Kruschev_won:0 "흐루시초프가 공화국을 선포하다"
+UKR_VIN_POWER:0 "러시아인들이 정부를 지배하다"
+UKR_OUN_POWER:0 "우크라이나 민족주의자들이 정부를 지배하다"
+UKR_HETMAN_POWER:0 "파울로 스코로파즈키가 정부를 지배하다"
+UKR_RECOV:0 "산업화의 첫 단계가 완료되다"
 
 ### Events ###
 ukraine.1.t:0 "우리의 왕국"
-ukraine.1.d:0 "The Kingdom of Ukraine proclaimed its independence with German support on 25th January 1918, a state of affairs that was quickly ratified by the Peace of Nations agreement at Brest-Litovsk. An initial experiment with socialism in the form of a People's Republic was swiftly expunged by a German-backed coup. This operation, led by the strongman and former general in the Russian army Pavlo Skoropadsky, set the tone for Ukraine's future. It was to be a breadbasket used by a military-aristocrat elite from across Eastern Europe as a source of food, a convenient market for goods and a military bulwark against the weakened Russian Republic. For a time the dispute between Germany and its Austro-Hungarian ally over Ukrainian rumbled on after the Weltkrieg, eventually settling on a compromise whereby King Vasily, an Austrian archduke born Wilhelm Franz von Habsburg, would rule with the support of Skoropadsky, who as the German-allied 'Hetman', holds incredible powers of both civil and military affairs. By 1927, German involvement in the Austrian Ausgleich negotiations meant that Ukraine fell de-facto into the hands of the Hetman, with King Vasily becoming an increasingly marginalised figure. Ukraine under the Hetmanate has become the breadbasket of the Reichspakt, and made its wealthy landowners exorbinantly wealthy, but at the expense of the Ukrainian peasantry. Now, almost twenty years after the Weltkrieg the national situation is unstable. The Reich forces us to sell our goods almost exclusively to nations within its sphere of influence while Syndicalists gain popularity amongst the downtrodden rural poor and city workers with each passing day. Both ethnic Russians and the pro-Russian population dream of unification with our former master to the East while Ukrainian nationalists proclaim that our Kingdom is no more than a German puppet. This is a immutable truth. Despite these many issues afflicting us, our land is prosperous and fertile, our people industrious and our potential boundless."
+ukraine.1.d:0 "우크라이나는 1918년 1월 25일 독일의 지원으로 독립을 선언했는데, 이 상황은 브레스트-리토프스크에서 열린 국제 평화 협정에 의해 신속히 비준되었습니다. 인민 공화국의 형태로 사회주의를 처음 실험한 것은 독일의 후원을 받은 쿠데타에 의해 신속히 소멸되었습니다. 파울로 스코로파즈키 전 러시아 육군 장군이 이끄는 이 작전은 우크라이나의 장래를 위한 토대를 마련했습니다. 그것은 동부 유럽 전역에서 온 군부주의 엘리트들이 식량 공급원, 상품의 편리한 시장, 약화된 러시아 공화국에 대한 군사적 방벽으로 사용하는 빵 바구니였습니다. 한동안 우크라이나를 둘러싼 독일과 오스트리아-헝가리 제국 동맹국간의 분쟁은 세계대전 이후 불거져 나갔고, 결국 오스트리아의 대공 빌헬름 프란츠 폰 합스부르크인 바실리 국왕이 독일계 연합인 '햇맨'으로서 민군 양측의 엄청난 힘을 갖고 있는 스코로파즈키의 지지를 받아 통치하게 될 타협안을 마련했습니다. 1927년까지, 독일의 오스트리아 대타협 참여는 우크라이나가 사실상 햇맨의 손에 넘어갔다는 것을 의미했고, 바실리 왕은 점점 더 소외된 인물이 되었습니다. 헤트만 산하의 우크라이나는 제국 조약의 토대가 되었고, 부유한 땅 소유자들을 끔찍하도록 부유하게 만들었지만, 우크라이나 농민들을 희생시켰습니다. 세계대전 이후 거의 20년이 지난 지금, 국가 상황은 불안정합니다. 제국은 거의 전적으로 영향력 있는 국가에 우리 제품을 팔도록 강요하는 반면 생디칼리스트들은 매일 같이 억압받는 시골 빈민과 도시 노동자들 사이에서 인기를 얻고 있습니다. 러시아 소수민족과 친 러시아 인구 모두 동방에 대한 옛 주인과의 통일을 꿈꾸고 있는 반면 우크라이나 민족주의자들은 우리 왕국은 독일의 꼭두각시에 지나지 않는다고 주장하고 있습니다. 우리를 괴롭히는 이러한 많은 문제들에도 불구하고, 우리의 땅은 부유하고 비옥하며, 우리 국민들은 근면하고, 우리의 잠재력은 무한합니다." 
 ukraine.1.a:0 "우크라이나의 영광은 사라지지 않으리!"
 ukraine.2.t:0 "우크라이나 정부"
 ukraine.2.d:0 "It is fair to say that our government is divided. While Pavel Skoropadsky does his best to solve the antagonism between the army, consisting of former officers of the Russian Imperial Army, and the civil administration, most of which actively supports our current position in the Reichspakt, many of Ukraine's problems can only be solved when the majority of our population - the kulaks and peasants - have an opportunity to sell their substantial agricultural produce in Europe beyond the narrow confines of the Reichspakt."
@@ -431,7 +431,7 @@ UKR_Coll_Prog:0 "집산화"
 UKR_Coll_Prog_desc:0 "After the latest agricultural crisis among the 'Kulaks', we have many new poor peasants all over Ukraine. Khrushchev proposes that they can work on new collective farms and produce goods for the state, which will provide them with farming tools and pay them a reasonable salary. This should hopefully, through pooling of resources, boost our total output."
 UKR_Fate_Monarchy:0 "왕실의 운명"
 UKR_Fate_Monarchy_desc:0 "King Vasily has become somewhat of a laughing stock to the Ukrainian people. By handing major powers to Krushchev and seeing more issues solved in months than the King himself had resolved in years he has only highlighted his own irrelevance. A former Austrian puppet king with no Austrian backing, his position is being openly debated by Popular Front members."
-UKR_Syn_Rev:0 "붉은 헤트만"
+UKR_Syn_Rev:0 "붉은 햇맨"
 UKR_Syn_Rev_desc:0 "As the great Hetman Bogdan Khmelnitsky, who once liberated people on both banks of the Dnieper from the Polish yoke, once did; Nikita Khrushchev and the Popular Front deposed the King, the Hetman, and purged the Rada of all elements not willing to embrace the new reality. Finally the people of Ukraine are ready to build new society, one both proud and free!"
 UKR_Friendship_Nations:0 "국가들의 친선"
 UKR_Friendship_Nations_desc:0 "The capitalists did their best to divide the people of Ukraine, imposing chauvinism and intolerance on the national minorities of our country. But new leadership with Khrushchev is ready to fight this deception and will encourage a policy of friendship with people from all nations. That's how the people of Ukraine will cooperate for a better future!"
