--- a/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -8,7 +8,7 @@ CAL_syndicalist_party_long:0 "미국 사회당"
 CAL_radical_socialist_party:0 "미국 사회당"
 CAL_radical_socialist_party_long:0 "미국 사회당"
 CAL_social_democrat_party:0 "농민-노동자당"
-CAL_social_democrat_party_long:0 "농-노동자당"
+CAL_social_democrat_party_long:0 "농민-노동자당"
 CAL_social_liberal_party:0 "진보당"
 CAL_social_liberal_party_long:0 "진보당"
 CAL_market_liberal_party:0 "공화당"
@@ -27,16 +27,16 @@ CAL_national_populist_party_long:0 "미국 제일당"
 CAL_laissez_faire_idea:0 "Laissez Faire Economics"
 CAL_immigration_act_idea:0 "National Origins Act"
 CAL_moral_education_idea:0 "Moral Education"
-CAL_new_nationalism_idea1:0 "New Nationalism"
-CAL_new_nationalism_idea2:0 "New Nationalism"
-CAL_new_nationalism_idea3:0 "New Nationalism"
-CAL_new_nationalism_idea4:0 "New Nationalism"
-CAL_new_nationalism_idea5:0 "New Nationalism"
-CAL_social_gospel_idea1:0 "Social Gospel"
-CAL_social_gospel_idea2:0 "Social Gospel"
-CAL_social_gospel_idea3:0 "Social Gospel"
-CAL_social_gospel_idea4:0 "Social Gospel"
-CAL_social_gospel_idea5:0 "Social Gospel"
+CAL_new_nationalism_idea1:0 "신국민주의"
+CAL_new_nationalism_idea2:0 "신국민주의"
+CAL_new_nationalism_idea3:0 "신국민주의"
+CAL_new_nationalism_idea4:0 "신국민주의"
+CAL_new_nationalism_idea5:0 "신국민주의"
+CAL_social_gospel_idea1:0 "사회복음"
+CAL_social_gospel_idea2:0 "사회복음"
+CAL_social_gospel_idea3:0 "사회복음"
+CAL_social_gospel_idea4:0 "사회복음"
+CAL_social_gospel_idea5:0 "사회복음"
 CAL_economic_recovery_idea:0 "Economic Recovery"
 CAL_education_philanthropy_idea:0 "Education Philanthropy"
 CAL_business_grants_idea:0 "Business Grants"
@@ -61,71 +61,71 @@ CAL_china_policy_tooltip:0 "§MWe shall decide on our Policy towards China§M"
 
 ### Cosmetic Tags ##
 
-PSA_america_49_social_democrat:0 "United States of America"
-PSA_america_49_social_democrat_ADJ:0 "American"
-PSA_america_49_social_democrat_DEF:0 "United States of America"
-PSA_america_49_social_liberal:0 "United States of America"
-PSA_america_49_social_liberal_ADJ:0 "American"
-PSA_america_49_social_liberal_DEF:0 "United States of America"
-PSA_america_49_market_liberal:0 "United States of America"
-PSA_america_49_market_liberal_ADJ:0 "American"
-PSA_america_49_market_liberal_DEF:0 "United States of America"
-PSA_america_49_social_conservative:0 "United States of America"
-PSA_america_49_social_conservative_ADJ:0 "American"
-PSA_america_49_social_conservative_DEF:0 "United States of America"
-PSA_america_49_authoritarian_democrat:0 "United States of America"
-PSA_america_49_authoritarian_democrat_ADJ:0 "American"
-PSA_america_49_authoritarian_democrat_DEF:0 "United States of America"
-PSA_america_49_paternal_autocrat:0 "United States of America"
-PSA_america_49_paternal_autocrat_ADJ:0 "American"
-PSA_america_49_paternal_autocrat_DEF:0 "United States of America"
-PSA_america_49_national_populist:0 "United States of America"
-PSA_america_49_national_populist_ADJ:0 "American"
-PSA_america_49_national_populist_DEF:0 "United States of America"
+PSA_america_49_social_democrat:0 "미합중국"
+PSA_america_49_social_democrat_ADJ:0 "미국"
+PSA_america_49_social_democrat_DEF:0 "미합중국"
+PSA_america_49_social_liberal:0 "미합중국"
+PSA_america_49_social_liberal_ADJ:0 "미국"
+PSA_america_49_social_liberal_DEF:0 "미합중국"
+PSA_america_49_market_liberal:0 "미합중국"
+PSA_america_49_market_liberal_ADJ:0 "미국"
+PSA_america_49_market_liberal_DEF:0 "미합중국"
+PSA_america_49_social_conservative:0 "미합중국"
+PSA_america_49_social_conservative_ADJ:0 "미국"
+PSA_america_49_social_conservative_DEF:0 "미합중국"
+PSA_america_49_authoritarian_democrat:0 "미합중국"
+PSA_america_49_authoritarian_democrat_ADJ:0 "미국"
+PSA_america_49_authoritarian_democrat_DEF:0 "미합중국"
+PSA_america_49_paternal_autocrat:0 "미합중국"
+PSA_america_49_paternal_autocrat_ADJ:0 "미국"
+PSA_america_49_paternal_autocrat_DEF:0 "미합중국"
+PSA_america_49_national_populist:0 "미합중국"
+PSA_america_49_national_populist_ADJ:0 "미국"
+PSA_america_49_national_populist_DEF:0 "미합중국"
 
-PSA_america_50_social_democrat:0 "United States of America"
-PSA_america_50_social_democrat_ADJ:0 "American"
-PSA_america_50_social_democrat_DEF:0 "United States of America"
-PSA_america_50_social_liberal:0 "United States of America"
-PSA_america_50_social_liberal_ADJ:0 "American"
-PSA_america_50_social_liberal_DEF:0 "United States of America"
-PSA_america_50_market_liberal:0 "United States of America"
-PSA_america_50_market_liberal_ADJ:0 "American"
-PSA_america_50_market_liberal_DEF:0 "United States of America"
-PSA_america_50_social_conservative:0 "United States of America"
-PSA_america_50_social_conservative_ADJ:0 "American"
-PSA_america_50_social_conservative_DEF:0 "United States of America"
-PSA_america_50_authoritarian_democrat:0 "United States of America"
-PSA_america_50_authoritarian_democrat_ADJ:0 "American"
-PSA_america_50_authoritarian_democrat_DEF:0 "United States of America"
-PSA_america_50_paternal_autocrat:0 "United States of America"
-PSA_america_50_paternal_autocrat_ADJ:0 "American"
-PSA_america_50_paternal_autocrat_DEF:0 "United States of America"
-PSA_america_50_national_populist:0 "United States of America"
-PSA_america_50_national_populist_ADJ:0 "American"
-PSA_america_50_national_populist_DEF:0 "United States of America"
+PSA_america_50_social_democrat:0 "미합중국"
+PSA_america_50_social_democrat_ADJ:0 "미국"
+PSA_america_50_social_democrat_DEF:0 "미합중국"
+PSA_america_50_social_liberal:0 "미합중국"
+PSA_america_50_social_liberal_ADJ:0 "미국"
+PSA_america_50_social_liberal_DEF:0 "미합중국"
+PSA_america_50_market_liberal:0 "미합중국"
+PSA_america_50_market_liberal_ADJ:0 "미국"
+PSA_america_50_market_liberal_DEF:0 "미합중국"
+PSA_america_50_social_conservative:0 "미합중국"
+PSA_america_50_social_conservative_ADJ:0 "미국"
+PSA_america_50_social_conservative_DEF:0 "미합중국"
+PSA_america_50_authoritarian_democrat:0 "미합중국"
+PSA_america_50_authoritarian_democrat_ADJ:0 "미국"
+PSA_america_50_authoritarian_democrat_DEF:0 "미합중국"
+PSA_america_50_paternal_autocrat:0 "미합중국"
+PSA_america_50_paternal_autocrat_ADJ:0 "미국"
+PSA_america_50_paternal_autocrat_DEF:0 "미합중국"
+PSA_america_50_national_populist:0 "미합중국"
+PSA_america_50_national_populist_ADJ:0 "미국"
+PSA_america_50_national_populist_DEF:0 "미합중국"
 
-PSA_america_51_social_democrat:0 "United States of America"
-PSA_america_51_social_democrat_ADJ:0 "American"
-PSA_america_51_social_democrat_DEF:0 "United States of America"
-PSA_america_51_social_liberal:0 "United States of America"
-PSA_america_51_social_liberal_ADJ:0 "American"
-PSA_america_51_social_liberal_DEF:0 "United States of America"
-PSA_america_51_market_liberal:0 "United States of America"
-PSA_america_51_market_liberal_ADJ:0 "American"
-PSA_america_51_market_liberal_DEF:0 "United States of America"
-PSA_america_51_social_conservative:0 "United States of America"
-PSA_america_51_social_conservative_ADJ:0 "American"
-PSA_america_51_social_conservative_DEF:0 "United States of America"
-PSA_america_51_authoritarian_democrat:0 "United States of America"
-PSA_america_51_authoritarian_democrat_ADJ:0 "American"
-PSA_america_51_authoritarian_democrat_DEF:0 "United States of America"
-PSA_america_51_paternal_autocrat:0 "United States of America"
-PSA_america_51_paternal_autocrat_ADJ:0 "American"
-PSA_america_51_paternal_autocrat_DEF:0 "United States of America"
-PSA_america_51_national_populist:0 "United States of America"
-PSA_america_51_national_populist_ADJ:0 "American"
-PSA_america_51_national_populist_DEF:0 "United States of America"
+PSA_america_51_social_democrat:0 "미합중국"
+PSA_america_51_social_democrat_ADJ:0 "미국"
+PSA_america_51_social_democrat_DEF:0 "미합중국"
+PSA_america_51_social_liberal:0 "미합중국"
+PSA_america_51_social_liberal_ADJ:0 "미국"
+PSA_america_51_social_liberal_DEF:0 "미합중국"
+PSA_america_51_market_liberal:0 "미합중국"
+PSA_america_51_market_liberal_ADJ:0 "미국"
+PSA_america_51_market_liberal_DEF:0 "미합중국"
+PSA_america_51_social_conservative:0 "미합중국"
+PSA_america_51_social_conservative_ADJ:0 "미국"
+PSA_america_51_social_conservative_DEF:0 "미합중국"
+PSA_america_51_authoritarian_democrat:0 "미합중국"
+PSA_america_51_authoritarian_democrat_ADJ:0 "미국"
+PSA_america_51_authoritarian_democrat_DEF:0 "미합중국"
+PSA_america_51_paternal_autocrat:0 "미합중국"
+PSA_america_51_paternal_autocrat_ADJ:0 "미국"
+PSA_america_51_paternal_autocrat_DEF:0 "미합중국"
+PSA_america_51_national_populist:0 "미합중국"
+PSA_america_51_national_populist_ADJ:0 "미국"
+PSA_america_51_national_populist_DEF:0 "미합중국"
 
 ### Flags ###
 
@@ -264,7 +264,7 @@ CAL_naval_aviation:0 "Naval Aviation"
 CAL_naval_aviation_desc:0 "Naval aviation is the future of warfare on the high seas. We should ensure that our air designs are capable of being launched from carriers and destroying the enemy fleet without even endangering our own."
 CAL_expand_dockyards:0 "Expand Dockyards"
 CAL_expand_dockyards_desc:0 "Our dockyards are somewhat inadequate to fight a war on their own. We need to ensure that new naval production facilities are constructed to support the war effort."
-CAL_submarines:0 "잠수함 "
+CAL_submarines:0 "잠수함"
 CAL_submarines_desc:0 "Submarines allow us to wreak havoc on enemy shipping and heavy ships. We should ensure that our designs stay up to date against enemy destroyers and anti-submarine tactics."
 CAL_liberty_ships:0 "리버티선"
 CAL_liberty_ships_desc:0 "Our shipyards, previously dedicated to commercial shipping, can easily be converted to produce massive numbers of convoys to supply our allies around the world."
@@ -337,7 +337,7 @@ CAL_moral_education_desc:0 "Higher education has long been a bastion of the elit
 CAL_new_american_century:0 "새로운 미국의 세기"
 CAL_new_american_century_desc:0 "In the time since our election, we have created a foundation to restore America to greatness. Rebuilding from the Civil War will take time, but we now out to the world, ready for a new century of greatness."
 ### Market Liberals ###
-CAL_social_gospel:0 "Social Gospel"
+CAL_social_gospel:0 "사회복음"
 CAL_social_gospel_desc:0 "It is a simple fact of economics that wealth trickles down from the wealthiest to the less fortunate. We should ensure that our citizens are aware of this new social gospel."
 CAL_soften_regulations:0 "Soften Regulations"
 CAL_soften_regulations_desc:0 "The last thing we need in the aftermath of this Civil War is unnecessary, burdensome regulations on businesses. We should cut back red tape and ensure that companies are able to succeed in these trying times."
@@ -347,7 +347,7 @@ CAL_fiscal_reform:0 "Fiscal Reform"
 CAL_fiscal_reform_desc:0 "We need a comprehensive reform of our finance and banking system. Cutting back red tape, unnecessary regulations, and other roadblocks to success are what this country needs after the Civil War."
 CAL_bureau_of_the_budget:0 "Bureau of the Budget"
 CAL_bureau_of_the_budget_desc:0 "A balanced budget is key in running any state. None of this 'deficit spending' nonsense. We should only spend what we make, and not a cent more."
-CAL_market_liberals_in_power:0 "Republicans elected"
+CAL_market_liberals_in_power:0 "공화당 선출"
 CAL_market_liberals_in_power_desc:0 "The Republican Party, champions of free trade, deregulation, and the financial sector, have won the [GetYear] elections. Citizens can expect to see lower taxes, better prices, and a return of the can-do individualist spirit of American capitalism."
 CAL_settelment_movement:0 "Settlement Movement"
 CAL_settelment_movement_desc:0 "The Settlement Movement was popular in pre-Weltkrieg England and America, and focused on bringing the rich and poor together in 'settlement houses' to better understand each other. We should encourage a revival of this movement in these difficult social times."
@@ -372,7 +372,7 @@ CAL_trust_busting:0 "Trust Busting"
 CAL_trust_busting_desc:0 "Large trusts were a major rallying cry for the CSA. We need to break them up to prevent radicalism from sprouting its ugly head again."
 CAL_free_trade1:0 "자유무역 지지"
 CAL_free_trade1_desc:0 "Free trade is the building block of a strong economy. We should ensure that tariffs are struck down, and that barriers to free trade are lifted with our allies and neutral countries around the globe."
-CAL_social_liberals_in_power:0 "Progressives Elected"
+CAL_social_liberals_in_power:0 "진보당 선출"
 CAL_social_liberals_in_power_desc:0 "The Progressive Party have won the [GetYear] election! Their agenda is a continuation of the pre-Civil War progressive wing of the Republican party, prioritizing liberal free trade, progressive social policies, and a moderate welfare state."
 CAL_country_life_movement:0 "Country Life Movement"
 CAL_country_life_movement_desc:0 "The Country Life movement emphasizes a return to a rural lifestyle, and has grown popular among those disillusioned with city life following the turmoil of the Civil War. We should encourage it, as it helps improve the infrastructure and industry of neglected, rural areas."
@@ -397,7 +397,7 @@ CAL_social_security:0 "사회보장"
 CAL_social_security_desc:0 "A modern Social Security system will help the elderly be able to retire in peace and financial security, and generate a great deal of popular support for our administration."
 CAL_medicare:0 "메디케어"
 CAL_medicare_desc:0 "Medicare is a radical new piece of legislation proposed by leading Farmer-Labor politicians, and will enable our poorer citizens to get the medical treatment they need."
-CAL_social_democrats_in_power:0 "농-노동자 당선"
+CAL_social_democrats_in_power:0 "농민-노동자당 선출"
 CAL_social_democrats_in_power_desc:0 "In an upset, the Farmer-Labor party has won the [GetYear] election! They have a sweeping agenda that emphasizes mending the divide between the working class and the wealthy, as well as building a welfare state."
 CAL_national_youth_adminstration:0 "National Youth Administration"
 CAL_national_youth_adminstration_desc:0 "Unemployment breeds radicalism. We must ensure that the young men demobilized from the war have meaningful employment, or we will see a rise in the radicalism we spent the last few years attempting to suppress."
